<resources>
    <string name="app_name">Wonder Gallery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">NeWare Studio</string>
    <string name="nav_header_subtitle">developer@neware.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ocean">Ocean</string>
    <string name="flower">Flower</string>
    <string name="landscape">Landscape</string>
    <string name="random">Random</string>
    <string name="animals">Animals</string>
    <string name="kitten">Kitten</string>
    <string name="puppies">Puppies</string>
    <string name="birds">Birds</string>
    <string name="myName">Bhuvaneshvar Nath Srivastava</string>
    <string name="myEmail">"bhuvaneshvar6@outlook.com"</string>
    <string name="myNum">(91)9151534306</string>
    <string name="weblinks">"Following websites were used while making this application -
        Main image provider : http://www.pixabay.com
        www.stackoverflow.com
        www.android-hive.com
        www.github.com
        www.pixabay.com
        https://bumptech.github.io/glide
        http://developers.google.com
        htpp://firebase.google.com"
    </string>
    <string name="communicate">Communicate</string>
    <string name="my_collection">My Collection</string>
    <string name="user_s_collection">User\'s Collection</string>
    <string name="about">About</string>
    <string name="share_with_friends">Share with Friends</string>
    <string name="library">Library</string>
</resources>